Fix text alignment in text area

--- a/src/components/redesign.css
+++ b/src/components/redesign.css
@@ -607,7 +607,7 @@
           }
 
           .attachButton__0923f {
-            margin-left: var(-space-md);
+            margin-right: 0;
 
             svg {
               height: 24px;
